2015-12-20  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja: Updated.

	* vte.c:
	  - vte_terminal_{set|get}_word_char_exceptions() are added.
	  - "child-exited" signal is triggered with exit status on vte-0.38 or later.

	* main-cocoa.m: LANG environmental variable is set.

	* x_main_config.c: The default value of "type_engine" option is changed
	  from xft to cairo on xlib.

	* ml_char.c: ml_char_combine() calls ml_normalize().

	* mlterm/Makefile.in, configure.in: ml_normalize.o is added to OBJ_CORE
	  on MacOSX.

	* ml_normalize.m: Added. (available on MacOSX alone.)

	* version.h.in: 3.6.1 -> 3.6.1post

2015-12-15  Araki Ken  <arakiken@users.sf.net>

	* 3.6.1 released.
	  (tag "rel-3_6_1")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.6.1.

2015-12-13  Araki Ken  <arakiken@users.sf.net>

	* gtk/Makefile.in: x_sb_screen.lo -> x_layout.lo

	* vte.c:
	  catch_child_exited() calls ml_close_dead_terms() via g_timeout_add()
	  because gnome-terminal() exits with segfault.

	* README.ja, man/mlterm.1: Updated.

	* mc_radio.c: "autohide" value of scrollbar_mode option is supported.

	* x_layout.[ch], x_screen.c:
	  If sb_mode is SBM_AUTOHIDE, scrollbar is hidden or unhidden according to
	  the position of the mouse pointer.

	* x_sb_mode.[ch]: SBM_AUTOHIDE is added.

	* cocoa.m: The position of the mouse pointer is fixed.

	* x_window.h, */x_window.c:
	  - x_window_init_event_mask() is removed.
	  - x_window_{add|remove}_event_mask() are fixed.

	* x_event_source.c: If need_resize() returns true, "use_local_echo" is
	  forcibly disabled.

	* jni/x_display.c: Pointer motion event is handled.

	* configure.in: utmp and ind options are disabled by default on MacOSX/Cocoa.

	* x_screen_manager.c:
	  - "mlclientx --serv ..." is available.
	  - WINDOWID environmental variable = window id of x_screen_t instead of a top window.

	* fb/x_connect_dialog.c: Inputting password is implemented.
