@@ -175,9 +175,8 @@ Supported platforms
   * NetBSD 5.2 / framebuffer (hpcmips)
   * NetBSD 6.1 / framebuffer (xm6i 0.42)
   * OpenSolaris 2009.06 / X (CC=cc) (x86)
-  * Ubuntu 15.04 / X, framebuffer (CC=gcc, CC=clang) (x86)
+  * Ubuntu 15.10 / X, framebuffer (CC=gcc, CC=clang) (x86)
   * CentOS 5 / X (x86)
-  * Arch Linux 2013.05.01 / X (CC=gcc) (x86)
   * FreeBSD 9.0 / framebuffer (x86)
   * OpenBSD 5.3 / framebuffer (x86)
   * MS Windows 7 / GDI (x86)
@@ -203,6 +202,7 @@ Supported platforms
   * OpenBSD 3.5 (x86)
   * Fedora Core 2 (x86)
   * SuSE Linux 9.1 (x86)
+  * Arch Linux 2013.05.01 / X (CC=gcc) (x86)
   * HP-UX 10.20 (CC="cc -Ae")
   * EWS4800 (UX/4800 R11.7) + X11R6 (CC=/usr/abiccs/bin/cc)
   * EWS4800 (UX/4800 R13.5, 64bit) (CC=/usr/ccs64/bin/cc)
